sheet 1 & 2/deploy.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: test-deploy

spec:
  replicas: 3
  strategy: {}
  selector: 
    matchLabels:
      deploy: example
  template:
    metadata:
      labels:
        deploy: example
    spec:
      containers:
        - name: front-end
          image: nginx
          ports:
            - containerPort: 80
        - name: rss-reader
          image: nickchase/rss-php-nginx:v1
          ports:
            - containerPort: 88
