sheet 1 & 2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: pod-ing
spec:
  rules:
  - host: foo.com
    http:
      paths:
      - backend:
          service:
            name: pod-svc
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
